--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
   <a href="positioning.html">Positioning Activity</a>
   <a href="#">Personal Website</a>
-  <a href="#">Personal Siteplan (erase this later)</a>
+  <a href="#">Personal Siteplan</a>
 </nav>
+<p>Phoenix Pina - WDD 130</p>
 </body>
 </html>
