--- a/htmlpractice/index.html
+++ b/htmlpractice/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>ATLUS</title>
-    <link rel="stylesheet" href="styles/atlusstyles.css"
+    <link rel="stylesheet" href="styles/styles.css"
   </head>
   <body>
     <header>
