Added content and images.

--- a/smtpersonalsite/site-plan-personal.html
+++ b/smtpersonalsite/site-plan-personal.html
@@ -129,29 +129,77 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        This is a website that informs people about a video game series called “Megami Tensei” by the company ATLUS (owned by SEGA). 
+        It is popular it Japan, but was a niche series in the United States until the game “Persona 5” was released
+        for western audiences in 2017. 
+        People that enjoy video games, especially Japanese role playing games, would come to this site. 
+      </p>
+      <p>
+        Questions that would be answered (on the home page) are: 
+        What is the game series about? (Most of the games take place in post-apocalyptic Japan, where demons have taken over. 
+        However, some games, notably the Persona series, take place in modern day Japan.) 
+        What is the gameplay like? (Most of the games are turn-based, like Pokémon.) 
+        How has the game series evolved over time? (The first game came out in 1987, so there’s a lot of evolving that has been done.)
+        What exactly are demons in this game? (Demons are any type of supernatural entity that can interfere with human life 
+        and can be summoned by something called the Demon Summoning Program. 
+        Demons take the form of creatures and figures from nearly every mythology there is.) 
+        Why are there so many series within this series? (There’s a lot of spinoff series. The main series is the “Shin Megami Tensei” series. 
+        The most famous spinoff is “Persona”, and other notable spinoffs are “Digital Devil Saga”, “Devil Summoner”, and “Devil Survivor”.)
+        Is the game appropriate for all ages? (Most of the games are rated M- but honestly, they are very tame for M rated games. 
+        A 14 year old could be mature enough to play them.)
+      </p>
+      <p>
+        Visitors of this website would want to come here as opposed to other sites because not only will I explain what the game series is, 
+        I will give honest opinions of the 3 games I will cover and why people should play them. 
+        If you were to go to the main ATLUS site, you aren’t given much about how the game is. If you go to other review sites, 
+        some of the information may be misleading because many people only know Persona 5 and use that as their constant frame of reference, 
+        while many others glorify the old games and immediately declare every new game of the series is bad.
+        My website will have information and reviews for 3 modern games that are knowledgeable and point out both good and bad things 
+        instead of focusing on just good or just bad.
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img class="smt1-poster" src="images/shin-megami-tensei.jpg" alt="Shin Megami Tensei">
+        <img class="persona1-cover" src="images/persona.jpg" alt="Persona">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Shin Megami Tensei V</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Page 2 will focus on Shin Megami Tensei V. Released for the Switch in 2021, it is part of the main series. 
+        This will be divided into 2 sections: the good and the bad, as there are mixed reviews of this game. 
+        It has good gameplay, graphics, soundtrack, and the demons are an enjoyable aspect, 
+        while the story and human characters are poorly written.
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img class="smtv-contrast" src="images/smtv-contrast.png" alt="SMT V">
+        <img class="smtv-battle" src="images/smtv-battle.jpg" alt="SMT V Combat">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Persona 5 Royal</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Page 3 will be focused on Persona 5 Royal, the expanded version of Persona 5. P5R released in the west in March 2020 for Playstation 
+        and was released on all modern platforms in October 2022. This is the most famous game of the Megami Tensei series. 
+        As such, this page will be describing why the game is so good while also explaining some of the weaker aspects of the game, 
+        which are things people should know especially since more people are going to have interest in this game since it is 
+        available on all modern gaming consoles now. 
+        There will be 2 main sections- one dedicated to explain gameplay, and the second will review the 
+        good and bad aspects of the story and character writing without spoiling the story.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img class="p5r-cover" src="images/persona5-royal.jpg" alt="P5R Cover">
+        <img class="p5r-battle" src="images/persona5-battle.jpg" alt="P5R Combat">
+
+      </ul>
+      <h3>Soul Hackers 2</h3>
+      <p>
+        I will also be adding a page 4. This one focuses on Soul Hackers 2, of the Devil Summoner series. 
+        This one got attacked by the fanbase. It does have issues, but it is enjoyable overall. 
+        This one will be split into 3 sections. One to explain gameplay as it takes aspects from standard Shin Megami Tensei combat 
+        and Persona daily life, but subtracts aspects from both sides. The second and third sections will review 
+        the good and bad aspects of the game respectively. 
+      </p>
+      <p>Images for the Page 4</p>
+        <img class="sh2-cover" src="images/soul-hackers2.jpg" alt="SH2 Cover">
+        <img class="sh2-battle" src="images/soul-hacker2-battle.jpg" alt="SH@ Combat">
 
       </ul>
       <hr>
