Added faq page.

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
+    <title>Whitewater Rafting Vacations | Torrential Tribute Rafting | Home</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -15,18 +15,18 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="#">Page 2</a>
+                <a href="faq-page.html">FAQ</a>
                 <a href="site-plan-rafting.html">Site Plan</a>
                 <a href="contactus.html">Contact Us</a>
             </nav>
         </header>
         <div id="hero">
             <div id="hero-box">
-                <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
+                <img id="hero-img" src="images/hero-2.png" alt="People enjoying white water rafting">
             </div>
             <section id="hero-msg">
-                <h1 class="home-title">Have An Adventure</h1>
-                <h4>Make Memories with Dry Oar </h4>
+                <h1 class="home-title">Experience an Unforgettable River!</h1>
+                <h4>Pay respects to nature with Torrential Tribute Rafting! </h4>
                 <div class='button-box'>
                     <a class='book' href="contactus.html">Book Now</a>
                 </div>
@@ -51,13 +51,13 @@
             <div id="background"></div>
             <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
             <section class="msg">
-                <h2>Thrills and Chills</h2>
-                <p>White water rafting is fun. Fun times afoot.</p>
+                <h2>The Thrills of White Water Rafting</h2>
+                <p>Enjoy the nature of earth while rafting down exciting rivers!</p>
                 <a class='join' href="rivers.html">Join Us</a>
             </section>
         </main>
         <footer>
-            <p>Dry Oar &copy; 2023 - Phoenix Pina</p>
+            <p>Torrential Tribute Rafting &copy; 2023 - Phoenix Pina</p>
             <p><a href="site-plan-rafting.html">Site Plan</a></p>
             <p><a href="contactus.html">Contact Us</a></p>
             <div class="social">
