--- a/smtpersonalsite/index.html
+++ b/smtpersonalsite/index.html
@@ -47,9 +47,9 @@
                 chaos- through your choices, actions, and who you support in game. Most of the games have are rated M for Mature for reasons
                 such as blood, language, and sexual references- but honestly, the games are pretty tame for rated M games. The blood, 
                 foul language, and sexual references are light and sparse- I've seen rated T games worse than Megaten games. But,
-                to each their own in terms of how strict they are with content.
+                to each their own in terms of how strict they are with content.</p>
 
-                Now, there are multiple spinoff series. Shin Megami Tensei is the main series, but there's a number of spinoffs such as 
+            <p>Now, there are multiple spinoff series. Shin Megami Tensei is the main series, but there's a number of spinoffs such as 
                 Digital Devil Saga, Devil Survivor, and the famous Persona series. They all have their own unique aspects and gameplay 
                 mechanics (some of which will be discussed on other pages of this website), but they are all of the same franchise, which 
                 means a lot of the same concepts, a lot of the same combat mechanics, and many of the same demons.
@@ -59,15 +59,15 @@
         <section class="demons">
             <h2>What Demons Are (in this series)</h2>
             <img class="demons" src="images/demons.jpg" alt="Demons">
-            <p>Now, demons in this game series refers to any supernatural entity that is capable of disrupting human life. Demons take 
+            <p>Now, demons in this game series refers to any supernatural entity that is capable of interferring with human life. Demons take 
                 on the form of entities from a lot of mythologies on earth. There's powerful Japanese gods such as Izanagi, awesome youkai such 
                 as Ippon-Datara, Chinese entities such as Feng Huang, American cryptids like the elusive Mothman, Native American beasts like the Thunderbird,
                 Egyptian, Greek, and Roman gods and monsters (hope you like the Minotaur), undead Matadores, Nordic gods (Marvel fans rejoice), 
                 English folklore myths like Silky, Celtic legends such as Cu Chulainn, and there's even figures from the Bible. Recognize 
                 the Legion and Melchezidek? The game series is very respectful towards all referenced belief systems. While angels consider themselves
-                as aligned with God and opposed to demons, they are still demons by definition.
+                as aligned with God and opposed to demons, they are still demons by definition.</p>
 
-                Demons can be summoned through supernatural means, but usually humans are given the power to summon them using what is known 
+            <p>Demons can be summoned through supernatural means, but usually humans are given the power to summon them using what is known 
                 as the Demon Summoning Program, created by the main character of the first Megami Tensei game. It can be downloaded on many 
                 types of technology, and a device that can summon demons is known as a COMP. There have been many types of COMPS throughout 
                 the series- people have been able to summon demons using smartphones, arm gauntlets, guns, even Nintendo DS-looking objects. 
@@ -88,7 +88,10 @@
                 of the opponents to zero. Summoners and demons have access to physical attacks and magic attacks. Magic attacks include elemental 
                 magic (like fire, ice, wind, etc.), healing magic, magic that raises or lowers stats (like attack and defense), and status 
                 problem inflicting magic (like putting the enemies to sleep or poisoning them). Exact combat mechanics and gimmicks can differ 
-                based on the game or spinoff series, but the broad mechanics stay the same across the board.
+                based on the game or spinoff series, but the broad mechanics stay the same across the board. In mainline games, you are also able to 
+                choose to speak to a demon instead of attacking it. This initiates "Demon Negotiation", where you are given various response options 
+                to things or questions the demon may say/ask/do. You must think about the personality of the demon you are speaking with. Answer well, 
+                and they may join you or give you items. Anger or bore them, and they may leave- or immediately attack.
             </p>
         </section>
     </main>
