--- a/smtpersonalsite/index.html
+++ b/smtpersonalsite/index.html
@@ -24,7 +24,7 @@
             <img class="first-image" src="images/smt-cool.jpg" alt="First Image">
             <h2>Website Purpose</h2>
             <p>This website has been created to inform readers of a video game series that I am a very big fan of:
-                Megami Tensei. It is a Japanese game series that was niche for Western audiences for a long time. 
+                Megami Tensei. It is a Japanese game series by the company ATLUS (owned by SEGA) that was niche for Western audiences for a long time. 
                 This website will inform you all what the series is, what the gameplay is like, and what some of the 
                 recently released games are like in order to help you all get a grasp of whether or not you would like to
                 play this series or not, as this is mainly geared towards people who are unfamiliar with this game.
