--- a/smtpersonalsite/smtv.html
+++ b/smtpersonalsite/smtv.html
@@ -40,7 +40,10 @@
                 games, but this game looks great, both in battle and outside. Outside of battle, the game is semi-open world. 
                 The Pokémon Sword and Shield DLC areas are a fair comparison in terms of how gameplay outside of battle works. 
                 It's no Fallout game or Zelda: Breath of the Wild, but you have a lot to explore in post-apocalyptic Tokyo, 
-                and for a destroyed, former shell of Tokyo, the overworld looks beautiful in my opinion.</p>
+                and for a destroyed, former shell of Tokyo, the overworld looks beautiful in my opinion. Another thing worth 
+                mentioning is the soundtrack. Admittedly, other Megaten games have better overall soundtracks, but this game still 
+                has a good soundtrack nonetheless. Some of the overworld tracks sound similar or repetitive, but a lot of the songs 
+                and battle music are very good, pleasant to listen to, and can be found on Spotify. </p>
 
             <img class="smtv-combat" src="images/smtv-battle.jpg" alt="SMTV Combat">
 
@@ -72,8 +75,33 @@
         <section class="smtv-bad">
             <h2>What Isn't So Good</h2>
             <p>Now I'll go over what I believe the game did poorly. For starters, the main story is boring. Story plot points are, 
-                for the most part, dull and uninteresting. I won't go into spoilers, but 
+                for the most part, dull and uninteresting. I won't go into spoilers, but there's your warning. Similar to Fallout 4 
+                and Zelda: Breath of the Wild, gameplay is probably the aspect that will keep you playing the game, not the story. </p> 
+            
+            <p>Now here's something Fallout 4 and Breath of the Wild do well that SMT V doesn't. Making interesting characters. 
+                Other Megaten games, like SMT IV and Persona 4, have human characters that are interesting, have development, and are 
+                loveable. Demons aren't the only interesting characters, the humans are as well. But not in SMT V. You have a few schoolmates 
+                that enter demonic Tokyo with you, which is usually standard issue in the mainline Shin Megami Tensei games- you usually 
+                have human companions that may fight alongside you, and some will try to persuade you to act according to their moral beliefs 
+                (lawfully, chaotically, or neutrally- if you don't actually know what these terms mean, I suggest looking them up. Law and chaos 
+                may not mean what you think they mean.). You have companions like these in this game, but they don't do much outside of cutscenes. 
+                There is one schoolmate who does become very useful (and at that point, likeable in my opinion) late in the game, but other 
+                than that, your schoolmates are not interesting, don't help you, and barely influence your choice of alignment.</p> 
 
+            <p>Speaking of alignment, usually the SMT games have different events or endings based on your choices and actions. But in this game, 
+                while you do have some choices to make in cutscene dialogue and side quests, they do almost nothing, and in the end, the 
+                ending of the game is decided based on a singular choice you make. One final complaint, the game is a Nintendo Switch exclusive. 
+                In the past year, ATLUS has been pretty good with releasing games for all modern platforms, but before 2022, ATLUS kind of 
+                released games on seemingly random modern platforms for some reason. Maybe there's a business decision behind it, but SMT V 
+                should be available on PlayStation, Steam, and Xbox (at least on Xbox Game Pass).</p>
+
+            <img class="smtv-contrast" src="images/smtv-contrast.png" alt="Cool SMT V Image">
+
+            <p>Overall, I recommend Shin Megami Tensei V. It is a beautiful and fun game, even though the story is lacking.
+                It is also a good entry game in the Megami Tensei franchise because it isn't as difficult as the older games. Also, 
+                typically people are more willing to play a game with modern graphics. If they like the modern game, they'll be more willing 
+                to go back and play the older games. Though, maybe you are someone who has a strong affinity towards older games, and wouldn't 
+                mind starting with the famous Shin Megami Tensei III for PS2 or even the first Shin Megami Tensei for the SNES. 
             </p>
         </section>
     </main>
